[package]
name = "wslplugins-macro-tests"
version = "0.1.0-alpha.0"
authors = ["Mickaël Véril <mika.veril@wanadoo.fr>"]
edition = "2021"

[dependencies]
wslplugins-rs = { path = "../wslplugins-rs", features = ["macro"] }
wslplugins-sys = { path = "../wslplugins-sys" }
[dependencies.windows]
version = "0.58"
features = ["Win32_Foundation"]

[dev-dependencies]
trybuild = "1.0.99"
