[package]
name = "wslplugins-rs"
version = "0.1.0-alpha.0"
authors = ["Mickaël Véril <mika.veril@wanadoo.fr>"]
edition = "2021"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_Networking_WinSock",
]

[dependencies]
wslplugins-sys = { path = "../wslplugins-sys"}
typed-path = ">0.1"
bitflags = { version = ">0.1.0", optional = true }
flagset = { version = ">0.1.0", optional = true }
enumflags2 = { version = ">0.5", optional = true }

[dependencies.semver]
version = ">0.1"
optional = true

[features]
default = ["bitflags"]
