[package]
name = "wslplugins-sys"
version = "0.1.0-alpha.0+2.1.3"
authors = ["Mickaël Véril <mika.veril@wanadoo.fr>"]
edition = "2021"

[build-dependencies]
bindgen = "0.69"
zip = "^2.0"
reqwest = { version = "0.12", features = ["blocking"] }
semver = "^1.0"

[dependencies]
libc = "0.2"
[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_Networking_WinSock"
]

